# prompt-improver

./: .coverage  .dockerignore  .env.example  .env.example.comprehensive  .env.mcp  .env.mcp.template  .env.template  .env.test  .gitignore  .importlinter  .mcp.json  .pre-commit-config.yaml  2025_integration_testing_guidelines.md  =0.80.0  =4.40.0  AGENT.md  AGENTS.md  ALL_COMPONENTS.md  ANALYSIS_3101.md  ANALYTICS_CACHE_REWRITE_2025.md  APES_2025_BEST_PRACTICES_RESEARCH.md  APES_Architectural_Audit_Report.md  APES_COMPREHENSIVE_DEPENDENCY_ANALYSIS.md  APRIORI_TEST_VERIFICATION_REPORT.md  ARCHITECTURE_COMPLIANCE_REPORT.md  ASYNC_INFRASTRUCTURE_PERFORMANCE_BASELINE_REPORT.md  AUTOML_STATUS_INTEGRATION_RESOLUTION.md  AUTOML_STATUS_QUALITY_DIAGNOSIS.md  Analysis_1308.md  BACKOFF_STRATEGY_SERVICE_SUMMARY.md  BEST_PRACTICE_2025.md  CACHE_SECURITY_ASSESSMENT_REPORT.md  CACHE_TEST_MIGRATION_REPORT.md  CACHING_INTEGRATION_SUMMARY.md  CAUSAL_LEARN_MIGRATION_REPORT.md  CHANGELOG.md  CHECKPOINT_1C_VALIDATION_REPORT.md  CHECKPOINT_2A_ML_ORCHESTRATION_VALIDATION_REPORT.md  CIRCULAR_IMPORT_DETAILED_ANALYSIS.json  CIRCULAR_IMPORT_PERFORMANCE_ASSESSMENT.md  (+291 more)
.claude/: aliases.json.pre-extraction-backup  claude_code_commands.json  external_tools.md  mcp_servers.json  mcp_servers.json.pre-extraction-backup
.devcontainer/: Dockerfile  devcontainer.json  setup-dev.sh  setup.sh  start-services.sh
.github/: COPILOT_SETUP_GUIDE.md  copilot-instructions.md  copilot-mcp-config.json  instructions.md
.kilocode/: mcp.json
.llm-context/: state.json
.serena/: project.yml
.taskmaster/: state.json
Prompting/: .gitignore
archive/: comprehensive_component_verification_test.py  comprehensive_legacy_cleanup_test.py  database_diagnostic_results.json  enhanced_structural_analyzer_test_results.json  final_legacy_cleanup_verification.py  fix_health_results.py  ml_orchestrator_integration_roadmap.json  mock_usage_results.json  phase1_integration_test_results.json  phase2a_enhanced_validator_test_results.json  phase2a_ready_components_test_results.json  phase2b_comprehensive_integration_results.json  phase2b_enhanced_background_manager_test_results.json  phase2b_enhanced_health_service_test_results.json  phase2b_enhanced_performance_monitor_test_results.json  phase2b_enhanced_realtime_monitor_test_results.json  phase2c_enhanced_components_test_results.json  phase2c_orchestrator_verification_results.json  phase3a_enhanced_verification_results.json  phase3a_simple_verification_results.json  priority1b_integration_test_results.json  roadmap_delta.json  ruff_full_stats.json  ruff_sample.json  ruff_violations.json  simple_phase2_test.py  test_context_learner_security.py  test_linguistic_quality_rule.py  test_ml_security_validation.py
benchmark_results/: performance_validation_20250818_234104.json
claudedocs/: circular_import_validation_report.md  domain_decomposition_safety_guide.md  fixture_consolidation_summary.md  import_linter_configuration.toml
config/: database_config.yaml  feature_flags.yaml  mcp_config.yaml  metrics_config.json  ml_config.yaml  production_readiness_config.json  prometheus.yml  redis_config.yaml  rule_config.yaml  unified_configuration_schema.yaml
database/: README.md  backup_20250714_231712.sql  backup_20250715_203524.sql  backup_20250715_222516.sql  backup_20250717_190403.sql  backup_20250719_092727.sql  init.sql  rule_seeds.sql  schema.sql
docs/: 2025_FastMCP_Enhancements.md  ADVANCED_PATTERN_DISCOVERY_INITIALIZATION_GUIDE.md  ARCHITECTURE_PATTERNS_2025.md  ARCHIVE_DISCOVERY_MAJOR_UPDATE.md  CONFIG_MANAGER_GUIDE.md  DATABASE_SETUP_GUIDE.md  DESIGN_DECISIONS_2025.md  DOCKER_IMAGE_STANDARDS.md  ENVIRONMENT_SETUP.md  MIGRATION_GUIDE.md  ML_HEALTH_MONITORING_GUIDE.md  ML_IMPLEMENTATION_VERIFICATION_SUMMARY.md  MONITORING_SETUP.md  PHASE4_REFACTORING_TESTING.md  VERIFICATION_REPORT.md  circular_import_remediation_plan.md  complexity_reduction_migration_guide.md  conf.py  configuration.md  coverage_report.json  cursor-ide-config.json  feature_flags_README.md  mcp-server-config.json  priority-1-implementation-summary.json  production-expert-dataset-results.json  project_overview.md  redis_pattern_cache_rollout.md  retry_manager_2025_best_practices.md  roadmap2.0.md  startup-orchestration.md  test_failures_summary.md  unified_connection_manager_v2_implementation.md  week8_implementation_summary.md
examples/: apes_mcp_startup_integration_example.py  config_manager_integration.py  data-science-config.yaml  demo_tui.py  enhanced_batch_processing_demo.py  monitoring_integration.py  redis_fixture_demo.py  redis_health_monitor_example.py  startup_integration_example.py  week7_enhanced_stop_demo.py
linting_configs/: .pre-commit-config.yaml  install_enforcement.sh  mypy.ini  pylintrc  setup.cfg
migrations/: env.py
scripts/: README_architectural_validator.md  analytics_import_performance_validation.py  analyze_dependencies.py  apply_phase4_migration.py  architectural_compliance.py  benchmark_2025_enhancements.py  benchmark_batch_processing.py  benchmark_database_optimization.py  benchmark_unified_connection_manager_migration.py  benchmark_websocket_optimization.py  capture_baselines.py  check_performance_regression.py  circular_dependency_analyzer.py  cleanup_ide_lag.sh  cleanup_nltk_resources.py  compare_baselines.py  comprehensive_architectural_validator.py  comprehensive_consolidation_performance_validator.py  comprehensive_consolidation_validator.py  comprehensive_performance_validation.py  convert_ml_imports_to_lazy_loading.py  create_feature_flags.sh  debug_ml_components.py  demo_performance_optimizations.py  demo_real_vs_mock_testing.py  demonstrate_phase4_achievements.py  deploy_mcp_phase0.sh  dev-server.sh  diagnose_import_contamination.py  final_performance_validation.py  focused_service_validation.py  generate_docs.py  gradual_tightening.py  import_analyzer.py  init_memory.sh  install_production_tools.py  integrate_business_metrics.py  k6_load_test.js  mcp_health_monitor.py  migrate_crypto_operations.py  (+82 more)
src/: db_optimization_results_1753292130.json  generate_embeddings.py  (+3 more)
(+2441 files in other folders)
